spade-tests/src/snapshots/spade_tests__typeinference__reading_from_tuple_members_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
extern fn takes_normal(x: bool, y: int<3>) -> bool;

entity uut(val: inv (bool, int<3>)) -> bool {
    let x = inst read_mut_wire(val.0);
    let y = inst read_mut_wire(val.1);
    takes_normal(x, y)
}


error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:4:32
  │
3 │ entity uut(val: inv (bool, int<3>)) -> bool {
  │                 ------------------ Type inv (bool, int<3>) inferred here
4 │     let x = inst read_mut_wire(val.0);
  │                                ^^^ - Because this is a tuple index
  │                                │    
  │                                expected tuple, got inv (bool, int<3>)

error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:5:32
  │
3 │ entity uut(val: inv (bool, int<3>)) -> bool {
  │                 ------------------ Type inv (bool, int<3>) inferred here
4 │     let x = inst read_mut_wire(val.0);
5 │     let y = inst read_mut_wire(val.1);
  │                                ^^^ - Because this is a tuple index
  │                                │    
  │                                expected tuple, got inv (bool, int<3>)
