spade-tests/src/snapshots/spade_tests__typeinference__recursive_inner_tuple_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    decl x;
    let x = ((true, x), false);
}


error: Inferred a recursive type ((_, *), _)
  ┌─ testinput:3:9
  │
3 │     let x = ((true, x), false);
  │         ^ Type ((_, *), _) inferred here
  │
  = help: The recursion happens at the type marked "*"
