spade-tests/src/snapshots/spade_tests__typeinference__register_initial_value_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity t(clk: clock) -> bool {
    reg(clk) x initial(0) = true;
    true
}


error: Register initial value mismatch. Expected bool got Number<#uint>
  ┌─ testinput:2:24
  │
2 │     reg(clk) x initial(0) = true;
  │              -         ^    ---- Type bool inferred here
  │              │         │     
  │              │         expected bool, got Number<#uint>
  │              because this has type Number<#uint>
  │
  = note: Expected: bool
               Got: Number<_>
