spade-tests/src/snapshots/spade_tests__typeinference__reset_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock, rst: bool) -> int<8> {
    reg(clk) a reset (rst: true) = 3;
    a
}


error: Register reset value mismatch. Expected Number<#uint> got bool
  ┌─ testinput:2:28
  │
2 │     reg(clk) a reset (rst: true) = 3;
  │              -             ^^^^    - Type Number<_> inferred here
  │              │             │        
  │              │             expected Number<#uint>
  │              because this has type Number<#uint>
  │
  = note: Expected: Number<_>
               Got: bool
