spade-tests/src/snapshots/spade_tests__typeinference__start_out_of_range_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[6:8]
}


error: Range index out of bounds
  ┌─ testinput:2:9
  │
2 │     x[6:8]
  │     -   ^ Index `8` out of bounds
  │     │    
  │     The array only has 6 elements
