spade-tests/src/snapshots/spade_tests__typeinference__the_source_of_int_uint_mismatches_is_clear.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: uint<8>, y: uint<8>) -> int<9> {
    let z: int<9> = x + y;
    z
}


error: Expected type int<9>, got uint<_>
  ┌─ testinput:2:21
  │
1 │ fn test(x: uint<8>, y: uint<8>) -> int<9> {
  │            ------- Type uint<_> inferred here
2 │     let z: int<9> = x + y;
  │            ------   ^^^^^ Expected int<9>
  │            │         
  │            Type int<9> inferred here
  │
  = note: Expected: int<9>
               Got: uint<_>
