spade-tests/src/snapshots/spade_tests__typeinference__trait_is_implemented_but_wrong_params.snap
---
source: spade-tests/src/typeinference.rs
---
trait Trait<T> {}

impl Trait<bool> for uint<8> {}

fn needs_trait<T: Trait<uint<8>>>(x: T) {}

fn test() {
    let x: uint<8> = 0;
    needs_trait(x)
}


error: Trait bound not satisfied. uint<8> does not implement Trait<uint<8>>
  ┌─ testinput:9:17
  │
5 │ fn needs_trait<T: Trait<uint<8>>>(x: T) {}
  │                   ----- Trait<uint<8>> Required because of the trait bound specified here
  ·
9 │     needs_trait(x)
  │                 ^ uint<8> does not implement Trait<uint<8>>
  │
  = help: The trait Trait<bool> is implemented for uint<8>
